Fix LFG group posts text overflowing

--- a/app/features/lfg/lfg.css
+++ b/app/features/lfg/lfg.css
@@ -54,7 +54,9 @@
 }
 
 .lfg__post-text {
+	word-wrap: break-word;
 	white-space: pre-wrap;
+	word-break: break-word;
 }
 
 .lfg__post-text-cut {
